Change structure of first chapter, kinda finished x ray interaction with matter

--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -8,6 +8,9 @@ We focus only on elastic scattering as that is the main process exploited when s
 
 By adding up the scattered amplitudes of an arrangement of atoms, we can then get the diffracted amplitude for a crystal. Note that the following derivations only apply if the diffraction pattern is viewed at a distance far away from the diffracting object. This region is known as the far-field or Fraunhofer region.
 
+\subsection{Scattering by strained crystals}
+
+
 \subsection{Phase retrieval}
 
 To understand the phase problem, it's important to know that when X-rays interact with a crystal, they are diffracted by the crystal lattice structure. The diffracted X-rays form a complex interference pattern of constructive and destructive interference, resulting in a series of spots known as diffraction peaks.
