--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -1,5 +1,9 @@
 \section{SXRD}
 
+
+\subsection{Surface reconstructions}
+
+
 \subsection{Crystal truncation rods}
 
 Thus the diffraction intensity of the finite-sized crystal has diffuse streaks connecting all the Bragg points. The diffuse intensity far from the nodes is of order of magnitude $N^4$ compared with $N^6$ at the nodes.
@@ -16,8 +20,6 @@ $\frac{I(Bragg peak)}{I(truncation rod)} = N_3 m \approx 10^5$
 More roughness means wider Bragg peaks and deeper valleys between the BP.
 
 It is not clear that different detailed models of roughness could be distinguished at this level of accuracy. One central concept to all descriptions of crystal truncation rods, however, is the continuation of the crystal lattice into the roughened region (not defects, keeping symmetry).
-
-\subsection{Reciprocal space mapping}
 
 
 \subsection{Reflectivety}
