--- a/main.tex
+++ b/main.tex
@@ -151,16 +151,34 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Commands %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\argon}{{\textcolor{ArgonColor}{\ce{Ar}\,}}}
-\newcommand{\ammonia}{{\textcolor{AmmoniaColor}{\ce{NH_3}\,}}}
-\newcommand{\nitrousoxide}{{\textcolor{NitrousOxideColor}{\ce{N_2O}\,}}}
-\newcommand{\water}{{\textcolor{WaterColor}{\ce{H_2O}\,}}}
-\newcommand{\nitrogen}{{\textcolor{NitrogenColor}{\ce{N_2}\,}}}
-\newcommand{\nitricacid}{{\textcolor{DarkOrange}{\ce{HNO_3}\,}}}
-\newcommand{\nitricoxide}{{\textcolor{NitrogenOxideColor}{\ce{NO}\,}}}
-\newcommand{\dioxygen}{{\textcolor{OxygenColor}{\ce{O_2}\,}}}
-\newcommand{\ptthreeofour}{{\textcolor{Important}{Pt$_3$O$_4$\,}}}
-\newcommand{\ammoniumnitrate}{{\textcolor{Blue}{\ce{NH_4NO_3}\,}}}
+\newcommand{\argon}{\ce{Ar}\,}
+%{\textcolor{ArgonColor}
+\newcommand{\ammonia}{\ce{NH_3}\,}
+%{\textcolor{AmmoniaColor}
+
+\newcommand{\nitrousoxide}{\ce{N_2O}\,}
+%{\textcolor{NitrousOxideColor}
+
+\newcommand{\water}{\ce{H_2O}\,}
+%{\textcolor{WaterColor}
+
+\newcommand{\nitrogen}{\ce{N_2}\,}
+%{\textcolor{NitrogenColor}
+
+\newcommand{\nitricacid}{ce{HNO_3}\,}
+%{\textcolor{DarkOrange}
+
+\newcommand{\nitricoxide}{\ce{NO}\,}
+%{\textcolor{NitrogenOxideColor}
+
+\newcommand{\dioxygen}{\ce{O_2}\,}
+%{\textcolor{OxygenColor}
+
+\newcommand{\ptthreeofour}{P$_3$O$_4$\,}
+%{\textcolor{Important}
+
+\newcommand{\ammoniumnitrate}{\ce{NH_4NO_3}\,}
+%{\textcolor{Blue}
 
 \newcommand{\yes}{{\textcolor{green}{0}}}
 
@@ -197,7 +215,7 @@
     \chapter{Theory and methods}
     % \input{Sections/2_Theory_Models/Catalysis}
     \input{Sections/2_Theory_Models/X-ray_interaction_matter}
-    % \input{Sections/2_Theory_Models/SXRD}
+    \input{Sections/2_Theory_Models/SXRD}
     % \input{Sections/2_Theory_Models/BCDI}
     % \input{Sections/2_Theory_Models/XPS}
     \input{Sections/2_Theory_Models/SixS}
